2010-01-24  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* AUTHORS, itpp/comm/ldpc.h, itpp/comm/ldpc.cpp: Improvements to
	the LDPC decoder. 1) Generalization to handle codes with arbitrary
	check node degrees. 2) Efficiency improvements for large node
	degrees.

	Thanks to Gorka Prieto for this patch.

2010-01-10  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/algebra/lapack.h, itpp/base/blas.h: Support latest
	ACML built with Intel Fortran compiler. It uses uppercase naming
	conventions for BLAS and LAPACK routines. This is only required on
	MS Windows (MSVC++).

	* configure.ac.in, itpp/base/Makefile.am, itpp/base/blas.h,
	itpp/base/sources.mk, itpp/base/vec.cpp, itpp/base/vec.h,
	itpp/base/zdotusub.f, m4/acx_blas.m4: Do not use zdotusub.f
	Fortran function for complex version of dot(). The call of Fortran
	zdotusub_() caused portability problems, which were difficult to
	debug and fix on all platforms.

	* win32/itpp_acml.vcproj, win32/itpp_mkl.vcproj: Update MSVC++
	project files to include recently added source files

	* configure.ac.in, itpp/Makefile.am, itpp/base/binfile.h,
	itpp/base/itcompat.h, itpp/base/itfile.h, itpp/base/ittypes.h,
	itpp/base/math/elem_math.cpp, itpp/base/math/elem_math.h,
	itpp/base/math/error.cpp, itpp/base/math/error.h,
	itpp/base/math/log_exp.cpp, itpp/base/math/log_exp.h,
	itpp/base/math/sources.mk, itpp/base/math/trig_hyp.cpp,
	itpp/base/math/trig_hyp.h, itpp/base/sources.mk,
	itpp/base/specmat.cpp, itpp/comm/galois.cpp,
	itpp/comm/modulator_nd.cpp, itpp/fixed/fix_base.h, itpp/itbase.h,
	itpp/signal/sigfun.cpp: Make itcompat.h a private (non-installable)
	header file. For the purpose of non-standard integer type
	definitions, a new header file ittypes.h is introduced. A few
	inlined functions from the math submodule are moved to newly
	created source files.

	* itpp/base/converters.cpp, itpp/base/converters.h: Remove
	workaround for GCC 3.3 error for a few template instantiations
